--- a/test-output/index.html
+++ b/test-output/index.html
@@ -210,7 +210,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/z7/5rbcjhtj2jd59ngtm0j255mm0000gn/T/testng-eclipse--1565596463/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/z7/5rbcjhtj2jd59ngtm0j255mm0000gn/T/testng-eclipse--1663314215/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -263,11 +263,11 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'checkAPIStatusTest')
 data.setCell(0, 2, 'com.qa.test.GetAPITest')
-data.setCell(0, 3, 842);
+data.setCell(0, 3, 998);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'getAPIJSONBodyTest')
 data.setCell(1, 2, 'com.qa.test.GetAPITest')
-data.setCell(1, 3, 10);
+data.setCell(1, 3, 18);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'getAPIHeaderTest')
 data.setCell(2, 2, 'com.qa.test.GetAPITest')
@@ -276,7 +276,7 @@ window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 854 ms</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -315,19 +315,19 @@ return data;
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">851 ms</span>
+                <span class="method-start">1009 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">getAPIHeaderTest</span>
-                <span class="method-start">851 ms</span>
+                <span class="method-start">1009 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">855 ms</span>
+                <span class="method-start">1013 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">getAPIJSONBodyTest</span>
-                <span class="method-start">855 ms</span>
+                <span class="method-start">1013 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
