--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62ada6">  <td>18/07/14 16:12:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setUp()[pri:0, instance:com.qa.test.GetAPITest@735b5592]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@342597804</td>   <td></td> </tr>
-<tr bgcolor="62ada6">  <td>18/07/14 16:12:04</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.checkAPIStatusTest()[pri:0, instance:com.qa.test.GetAPITest@735b5592]">checkAPIStatusTest</td> 
-  <td>main@342597804</td>   <td></td> </tr>
-<tr bgcolor="62ada6">  <td>18/07/14 16:12:04</td>   <td>850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setUp()[pri:0, instance:com.qa.test.GetAPITest@735b5592]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@342597804</td>   <td></td> </tr>
-<tr bgcolor="62ada6">  <td>18/07/14 16:12:04</td>   <td>850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getAPIHeaderTest()[pri:0, instance:com.qa.test.GetAPITest@735b5592]">getAPIHeaderTest</td> 
-  <td>main@342597804</td>   <td></td> </tr>
-<tr bgcolor="62ada6">  <td>18/07/14 16:12:04</td>   <td>854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setUp()[pri:0, instance:com.qa.test.GetAPITest@735b5592]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@342597804</td>   <td></td> </tr>
-<tr bgcolor="62ada6">  <td>18/07/14 16:12:04</td>   <td>854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getAPIJSONBodyTest()[pri:0, instance:com.qa.test.GetAPITest@735b5592]">getAPIJSONBodyTest</td> 
-  <td>main@342597804</td>   <td></td> </tr>
+<tr bgcolor="acb575">  <td>18/07/22 11:33:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setUp()[pri:0, instance:com.qa.test.GetAPITest@4f933fd1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="acb575">  <td>18/07/22 11:33:21</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.checkAPIStatusTest()[pri:0, instance:com.qa.test.GetAPITest@4f933fd1]">checkAPIStatusTest</td> 
+  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="acb575">  <td>18/07/22 11:33:22</td>   <td>1008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setUp()[pri:0, instance:com.qa.test.GetAPITest@4f933fd1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="acb575">  <td>18/07/22 11:33:22</td>   <td>1008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getAPIHeaderTest()[pri:0, instance:com.qa.test.GetAPITest@4f933fd1]">getAPIHeaderTest</td> 
+  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="acb575">  <td>18/07/22 11:33:22</td>   <td>1012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPITest.setUp()[pri:0, instance:com.qa.test.GetAPITest@4f933fd1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="acb575">  <td>18/07/22 11:33:22</td>   <td>1012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPITest.getAPIJSONBodyTest()[pri:0, instance:com.qa.test.GetAPITest@4f933fd1]">getAPIJSONBodyTest</td> 
+  <td>main@597255128</td>   <td></td> </tr>
 </table>
